:construction: Start rework gradle